modal: better default css to prevent scroll behind the modal
a bit of weird logic is done here especially to make it work on iOS. The
complexity is hidden in a new Dialog component

--- a/src/scss/klaro.scss
+++ b/src/scss/klaro.scss
@@ -111,6 +111,17 @@ $theme-color-light: #aaa;
     display: inline-block;
 }
 
+.klaroHtml-WithModalOpen {
+    height: 100%;
+}
+
+.klaroHtml-WithModalOpen body {
+    position: fixed;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+}
+
 .klaro-ModalOverlay {
     z-index: 1000;
     background: rgba(0,0,0,0.5);
@@ -121,29 +132,25 @@ $theme-color-light: #aaa;
     bottom: 0;
 }
 
-.klaro-Modal {
+.klaro-ModalWrapper {
     z-index: 1001;
-    box-shadow: $box-shadow;
-
-    @media (min-width: 1024px){
-        border-radius: $border-radius;
-        position: relative;
-        margin: 0 auto;
-        max-width: 640px;
-        height: auto;
-        width: auto;
-    }
-
-    width: 100%;
-    max-height: 98%;
-
-    top: 50%;
-    transform: translateY(-50%);
-
     position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 640px;
+    max-width: 100%;
+    max-height: 100%;
     overflow: auto;
+}
+
+ .klaro-Modal {
     background: $theme-bg;
     color: $theme-color;
+    border-radius: $border-radius;
+    box-shadow: $box-shadow;
 }
 
 .klaro-Modal-header {
